# microlife

./: .gitignore  CMakeLists.txt  README.md  config.cpp  config.h  entity.h  field.cpp  field.h  main.cpp  pch.h  population.cpp  population.h  render.cpp  render.h  types.hpp
environment/: food.h  obstacle.h  obstacle_cont.cpp  obstacle_cont.h
fauna/: creature.cpp  creature.h  population.cpp  population.h
